# google-oauth

./: .envrc  Dockerfile  docker-compose.yml  pyproject.toml
googleoAuth/: db.sqlite3  manage.py
googleoAuth/googleoAuth/: asgi.py  settings.py  urls.py  wsgi.py
googleoAuth/myapp/: views.py
googleoAuth/myapp/templates/myapp/: index.html
