[tool.poetry]
name = "shipyard-google-oauth"
version = "0.1.0"
description = ""
authors = ["Shipyard <team@shipyard.build>"]

[tool.poetry.dependencies]
python = "3.8.8"
Django = "3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"